maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:71: error: type mismatch;
 found   : Array[Int]
 required: scala.collection.mutable.Queue[Int]
    _C=new Array[Int](elements)
       ^